--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Task list
+author=Antimated
+description=A list of completable tasks.
+tags=task, list, points, completed
+plugins=com.antimated.tasklist.TaskListPlugin
