--- a/src/main/resources/com/antimated/tasklist/default-tasks.json
+++ b/src/main/resources/com/antimated/tasklist/default-tasks.json
@@ -42,7 +42,7 @@
   },
   {
 	"id": 5,
-	"description": "Get 300.000.000 total xp",
+	"description": "Get 300M total xp",
 	"tier": "ELITE",
 	"type": "TOTAL_XP",
 	"requirement": {
