--- a/src/main/resources/com/antimated/tasklist/default-tasks.json
+++ b/src/main/resources/com/antimated/tasklist/default-tasks.json
@@ -49,5 +49,25 @@
 	  "xp": 300000000
 	},
 	"completed": false
+  },
+  {
+	"id": 6,
+	"description": "Complete the Fremenik Trials",
+	"tier": "ELITE",
+	"type": "QUEST",
+	"requirement": {
+	  "quest": "THE_FREMENNIK_TRIALS"
+	},
+	"completed": false
+  },
+  {
+	"id": 7,
+	"description": "Complete the Children of the Sun",
+	"tier": "ELITE",
+	"type": "QUEST",
+	"requirement": {
+	  "quest": "CHILDREN_OF_THE_SUN"
+	},
+	"completed": false
   }
 ]
