Add prayer tasks type

--- a/src/main/resources/com/antimated/tasklist/default-tasks.json
+++ b/src/main/resources/com/antimated/tasklist/default-tasks.json
@@ -93,5 +93,15 @@
 	  }
 	},
 	"completed": false
+  },
+  {
+	"id": 8,
+	"description": "Enable the Piety prayer",
+	"tier": "HARD",
+	"type": "PRAYER",
+	"requirement": {
+	  "prayer": "PIETY"
+	},
+	"completed": false
   }
 ]
